@@ -2,6 +2,9 @@ Revision history for Perl extension Module::Build.
 
 0.33_03 - 
 
+ Bug-fixes:
+ - Removes Module::Build from its own configure/build_requires
+
 0.33_02 - Mon Jun 15 12:23:55 EDT 2009
 
  Bug-fixes:
